src/objects/DD_Provider_Type__c.object
<CustomObject>
    <fields>
        <fullName>DD_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Family_Structure__c</fullName>
        <label>Family Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Civil Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married Couple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married Same Sex Couple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmarried Couple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmarried Same Sex Couple</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Provider__c</fullName>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Provider Types</relationshipLabel>
        <relationshipName>DD_Provider_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DD_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Foster Care Private Agency</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Years_of_Service__c</fullName>
        <label>Years of Service</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <label>Provider Type</label>
    <nameField>
        <displayFormat>SPT-{0000}</displayFormat>
        <label>Provider Type Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>